JEKT-1753 ❇️ New     - Pipeline        - SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2003,6 +2003,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI:
+    name: SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 14:56:19'
+    modifiedAt: '2023-05-15 14:56:37'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
