JEKT-1753 🔁 Modified     - Pipeline        - SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI     - Dataset        - MD_CO_CD        - DS_SAP_HMD_KNB1

--- a/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
@@ -520,7 +520,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: GMVKZD
+  - name: AVSND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AD_HASH
     type: string
     nullable: true
     metadata:
@@ -528,6 +535,20 @@ schema:
       mappings: []
       tags: []
   - name: QLAND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GMVKZD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CVP_XBLCK_B
     type: string
     nullable: true
     metadata:
