--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2011,10 +2011,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 14:56:19'
-    modifiedAt: '2023-05-15 14:56:37'
+    modifiedAt: '2023-05-15 15:09:21'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2533,7 +2535,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-15 12:58:36'
+    modifiedAt: '2023-05-15 15:08:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6778,7 +6780,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 13:00:50'
+    modifiedAt: '2023-05-15 15:01:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
