--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2019,6 +2019,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_P01_BBL_GEU_SVS:
+    name: SAP_MD_CO_CD_P01_BBL_GEU_SVS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 16:00:00'
+    modifiedAt: '2023-05-15 16:03:53'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
