JEKT-1753 🔁 Modified     - Pipeline        - SAP_MD_CO_CD_P01_BBL_GEU_SVS     - Dataset        - MD_CO_CD        - DS_SAP_HMD_KNB1

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2027,10 +2027,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 16:00:00'
-    modifiedAt: '2023-05-15 16:03:53'
+    modifiedAt: '2023-05-15 16:09:59'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2549,7 +2551,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-15 15:08:47'
+    modifiedAt: '2023-05-15 16:09:27'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6794,7 +6796,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 15:30:42'
+    modifiedAt: '2023-05-15 16:09:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
