JEKT-1753❇️ New     - Pipeline        - SAP_MD_CO_CD_BBL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2035,6 +2035,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_BBL:
+    name: SAP_MD_CO_CD_BBL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 17:56:46'
+    modifiedAt: '2023-05-15 18:00:46'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
