--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2043,10 +2043,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 17:56:46'
-    modifiedAt: '2023-05-15 18:00:46'
+    modifiedAt: '2023-05-15 18:05:51'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2565,7 +2567,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-15 16:09:27'
+    modifiedAt: '2023-05-15 18:05:51'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6810,7 +6812,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 16:09:59'
+    modifiedAt: '2023-05-15 18:04:26'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
