JEKT-1753 ❇️ New     - Pipeline        - SAP_MD_CO_CD_MBP_FSN_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2051,6 +2051,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_MBP_FSN_ATL:
+    name: SAP_MD_CO_CD_MBP_FSN_ATL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 18:13:31'
+    modifiedAt: '2023-05-15 18:17:13'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
