--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2059,10 +2059,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 18:13:31'
-    modifiedAt: '2023-05-15 18:17:13'
+    modifiedAt: '2023-05-15 18:29:39'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2581,7 +2583,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-15 18:05:51'
+    modifiedAt: '2023-05-15 18:28:52'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6826,7 +6828,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 18:06:53'
+    modifiedAt: '2023-05-15 18:29:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
