JEKT-1905: SAP development 30% 🔁 Modified     - Pipeline        - SAP_01_md_matl_dstn_chn     - Dataset        - MD_MATL_DSTN_CHN        - DS_SAP_01_MVKE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,11 +2094,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-16 10:29:25'
+    modifiedAt: '2023-05-16 10:56:39'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_DSTN_CHN
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3292,7 +3293,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-16 10:56:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7042,7 +7043,7 @@ datasets:
     description: ''
     author: jcacere7@its.jnj.com
     createdAt: '2023-05-16 10:29:07'
-    modifiedAt: '2023-05-16 10:29:07'
+    modifiedAt: '2023-05-16 10:44:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
