JEKT-1753 ❇️ New     - Pipeline        - SAP_MD_CO_CD_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2067,6 +2067,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_ATL:
+    name: SAP_MD_CO_CD_ATL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-16 12:24:59'
+    modifiedAt: '2023-05-16 12:27:19'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
