JEKT-1753 🔁 Modified     - Pipeline        - SAP_MD_CO_CD_ATL     - Dataset        - DS_SAP_HMD_KNB1

--- a/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: BUKRS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _deleted_
     type: string
     nullable: true
@@ -24,6 +17,13 @@ schema:
       mappings: []
       tags: []
   - name: KUNNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BUKRS
     type: string
     nullable: true
     metadata:
@@ -514,6 +514,13 @@ schema:
       mappings: []
       tags: []
   - name: CESSION_KZ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: QLAND
     type: string
     nullable: true
     metadata:
