--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2075,10 +2075,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 12:24:59'
-    modifiedAt: '2023-05-16 12:27:19'
+    modifiedAt: '2023-05-16 12:30:42'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -6842,7 +6844,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 18:29:39'
+    modifiedAt: '2023-05-16 12:30:33'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
