JEKT-1753 ❇️ New     - Pipeline        - JDE_MD_CO_CD_BW2_JET_DJD_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2083,6 +2083,20 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES:
+    name: JDE_MD_CO_CD_BW2_JET_DJD_JES
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-16 13:21:42'
+    modifiedAt: '2023-05-16 13:27:32'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
