--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2091,9 +2091,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 13:21:42'
-    modifiedAt: '2023-05-16 13:27:32'
+    modifiedAt: '2023-05-16 13:37:28'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_F0101_adt
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6868,6 +6869,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-05-12 17:30:46'
         modifiedAt: '2023-05-12 17:30:46'
+  datasets/DS_JDE_F0101_adt:
+    name: DS_JDE_F0101_adt
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-16 13:30:47'
+    modifiedAt: '2023-05-16 13:30:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-16 13:30:47'
+        modifiedAt: '2023-05-16 13:30:47'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
