--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2091,11 +2091,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 13:21:42'
-    modifiedAt: '2023-05-16 13:40:36'
+    modifiedAt: '2023-05-16 13:57:14'
     datasets:
       inputs:
       - datasets/DS_JDE_F0101_adt
-      outputs: []
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2614,7 +2615,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-16 13:00:54'
+    modifiedAt: '2023-05-16 13:54:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6874,7 +6875,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-16 13:30:47'
-    modifiedAt: '2023-05-16 13:30:47'
+    modifiedAt: '2023-05-16 13:55:37'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
