JEKT-1726 Small modifications post data validation in databricks (COALESCE for LIPBIN...) & Switching the order of the COST/x * INV/x in the  expression 🔁 Modified     - Pipeline        - MD_MATL_VALUT_JDE     - Dataset        - MD_MATL_VALUT

--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -32,7 +32,7 @@ schema:
       tags: []
   - name: VALUT_TYPE_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
