JEKT-1753 ❇️ New JOB and linkage     - Job        - JOB_MD_CO_CD
🔁 Modified
    - Pipeline
       - SAP_MD_CO_CD_MBP_FSN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2052,14 +2052,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_CO_CD_MBP_FSN_ATL:
-    name: SAP_MD_CO_CD_MBP_FSN_ATL
+    name: SAP_MD_CO_CD_MBP_FSN
     description: ''
     author: jcovezd1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-15 18:13:31'
-    modifiedAt: '2023-05-15 18:36:25'
+    modifiedAt: '2023-05-16 15:21:05'
     datasets:
       inputs:
       - datasets/DS_SAP_HMD_KNB1
@@ -8410,6 +8410,38 @@ jobs:
     createdAt: '2023-04-19 13:29:27'
     modifiedAt: '2023-05-10 03:54:48'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_CO_CD:
+    name: JOB_MD_CO_CD
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
+    - pipelines/SAP_MD_CO_CD_P01_BBL_GEU_SVS
+    - pipelines/SAP_MD_CO_CD_HMD
+    - pipelines/SAP_MD_CO_CD_MBP_FSN_ATL
+    - pipelines/SAP_MD_CO_CD_BBL
+    - pipelines/SAP_MD_CO_CD_ATL
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
+    - pipelines/SAP_MD_CO_CD_TAI
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-16 14:43:54'
+    modifiedAt: '2023-05-16 15:28:10'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
