JEKT-1726 Created and configured job ❇️ New     - Job        - MD_MATL_VALUT_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8351,6 +8351,32 @@ jobs:
     createdAt: '2023-05-05 19:57:17'
     modifiedAt: '2023-05-05 19:58:18'
     author: smille29@its.jnj.com
+  jobs/MD_MATL_VALUT_JOB:
+    name: MD_MATL_VALUT_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_MATL_VALUT_JDE
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-16 15:12:34'
+    modifiedAt: '2023-05-16 15:39:42'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
