--- a/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_HMD_KNB1/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MANDT
     type: string
     nullable: true
@@ -31,6 +24,13 @@ schema:
       mappings: []
       tags: []
   - name: PERNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KNB1_EEW_CC
     type: string
     nullable: true
     metadata:
@@ -520,6 +520,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: AVSND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AD_HASH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: QLAND
     type: string
     nullable: true
@@ -527,7 +541,35 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CVP_XBLCK_B
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CIIUCODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: GMVKZD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PAYMENTCLEARINGGRPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PAYTRSN
     type: string
     nullable: true
     metadata:
@@ -569,7 +611,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
