JEKT-1735 Pipeline run for HM2 and Config updates 🔁 Modified     - Pipeline        - SAP_01_MD_BTCH_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN_ATL_HM2_HMD        - JDE_01_MD_BTCH_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES     - Dataset        - DS_SAP_01_MCHA

--- a/src/datasets/DS_SAP_01_MCHA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_MCHA/pbt_aspects.yml
@@ -2,14 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: WERKS
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -23,7 +16,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MANDT
+  - name: WERKS
     type: string
     nullable: true
     metadata:
@@ -136,6 +129,20 @@ schema:
       mappings: []
       tags: []
   - name: VLMAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BATCH_ID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: XPCBT
     type: string
     nullable: true
     metadata:
@@ -268,6 +275,111 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: ERSDA_TMSTP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ERSDA_TZ_SYS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ERSDA_TZ_USR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZFDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CREATION_DATETIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LASTCHANGE_DATETIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _STTPEC_SERTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _STTPEC_SYNCTIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _STTPEC_SYNCACT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SEASON_YEAR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SEASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_COLLECTION
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_THEME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _STTPEC_PLANT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SLED_EXPIRED
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -303,7 +415,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
