--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7184,10 +7184,13 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     jobClusterMode:
       clusterMode:
@@ -7195,7 +7198,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-08 18:25:44'
+    modifiedAt: '2023-05-16 23:13:06'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
