JEKT-2394 - 🔁 Modified - Continue to add Pipelines to Jobs     - Job        - GEU_PIPELINE_JOB        - FSN_PIPELINE_JOB        - BBL_PIPELINE_JOB        - BBA_PIPELINE_JOB        - BBN_PIPELINE_JOB        - ATL_PIPELINE_JOB        - BWI_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7192,13 +7192,15 @@ jobs:
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-16 23:13:06'
+    modifiedAt: '2023-05-16 23:22:51'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -7222,16 +7224,20 @@ jobs:
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bba
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-08 21:13:50'
+    modifiedAt: '2023-05-16 23:27:30'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -7256,16 +7262,20 @@ jobs:
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/MD_BILL_DOC_HDR_BBL
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-08 21:13:48'
+    modifiedAt: '2023-05-16 23:34:04'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -7290,16 +7300,20 @@ jobs:
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-08 18:30:01'
+    modifiedAt: '2023-05-16 23:35:57'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
@@ -7533,19 +7547,23 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_MD_MATL_INV_BWI
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-08 18:30:11'
+    modifiedAt: '2023-05-16 23:38:08'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -7563,21 +7581,25 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_SHIP_FSN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-08 18:27:40'
+    modifiedAt: '2023-05-16 23:39:58'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -7713,7 +7735,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-05-08 18:27:34'
+    modifiedAt: '2023-05-16 23:45:11'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
