🔁 JEKT-1914     - Pipeline        - SAP_MD_CUST_MSTR_UNLD_DATA     - Dataset        - MD_CUST_MSTR_UNLD_DATA        - DS_SAP_01_KNVA

--- a/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
+++ b/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
@@ -3,7 +3,7 @@ schema:
   type: struct
   fields:
   - name: SRC_SYS_CD
-    type: integer
+    type: string
     nullable: false
     metadata:
       description: ''
