--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1999,7 +1999,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-14 20:11:53'
-    modifiedAt: '2023-05-17 02:09:31'
+    modifiedAt: '2023-05-17 02:49:31'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNVA
@@ -8417,6 +8417,31 @@ jobs:
     createdAt: '2023-05-02 15:37:46'
     modifiedAt: '2023-05-02 15:38:18'
     author: natkins7@its.jnj.com
+  jobs/JOB_MD_CUST_MSTR_UNLD_DATA:
+    name: JOB_MD_CUST_MSTR_UNLD_DATA
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-17 02:15:14'
+    modifiedAt: '2023-05-17 02:19:35'
+    author: hgermi1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
