JEKT-1896 Created new pipeline for JET. Updated desc for standard MD_MATL pipeline ❇️ New     - Pipeline        - JDE_MD_MATL_JET
🔁 Modified
    - Pipeline
       - JDE_MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2028,13 +2028,14 @@ pipelines:
     dependencies: {}
   pipelines/JDE_MD_MATL:
     name: JDE_MD_MATL
-    description: MD_MATL For JDE systems
+    description: MD_MATL For JDE --> bw2, deu, djd, gmd, jem, jes, jet, jsw, mtr,
+      sjd
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-11 07:34:19'
+    modifiedAt: '2023-05-17 09:39:49'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
@@ -2082,6 +2083,24 @@ pipelines:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_HM2
       - datasets/DS_SAP_T134T_BBA_BBL_BBN
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_MD_MATL_JET:
+    name: JDE_MD_MATL_JET
+    description: MD_MATL For JDE --> bw2, deu, djd, gmd, jem, jes, jet, jsw, mtr,
+      sjd
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-17 10:51:58'
+    modifiedAt: '2023-05-17 11:53:20'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0005_41
+      - datasets/DS_JDE_01_F4101
       outputs:
       - datasets/MD_MATL
     subgraphs: []
