🔁 JEKT-1914     - Pipeline        - SAP_MD_CUST_MSTR_UNLD_DATA     - Dataset        - MD_CUST_MSTR_UNLD_DATA

--- a/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
+++ b/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
@@ -326,7 +326,7 @@ schema:
       tags: []
   - name: _deleted_
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
