JEKT-1871 - bw2 pipeline ❇️ New     - Dataset        - DS_JDE_MD_SLS_ORDR_HIST_JDE
🔁 Modified
    - Pipeline
       - JDE_MD_SLS_ORDR_HIST_JDE_BW2
    - Dataset
       - DS_JDE_F42199

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -583,26 +583,6 @@ pipelines:
       - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
-  pipelines/SAP_01_MD_BILL_DOC_HDR:
-    name: SAP_MD_BILL_DOC_HDR_HMD
-    description: ''
-    author: jcovezd1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-05-12 14:17:49'
-    datasets:
-      inputs:
-      - datasets/DS_SAP_01_TSPAT
-      - datasets/DS_SAP_01_TVFKT
-      - datasets/DS_SAP_01_TVKOT
-      - datasets/DS_SAP_01_TVTWT
-      - datasets/DS_SAP_01_VBRK
-      outputs:
-      - datasets/MD_BILL_DOC_HDR
-    subgraphs: []
-    dependencies: {}
   pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES:
     name: JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     description: ''
@@ -2094,11 +2074,32 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 09:01:57'
-    modifiedAt: '2023-05-16 10:52:43'
+    modifiedAt: '2023-05-17 13:28:18'
     datasets:
       inputs:
       - datasets/DS_JDE_F42199
-      outputs: []
+      outputs:
+      - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_MD_BILL_DOC_HDR:
+    name: SAP_MD_BILL_DOC_HDR_HMD
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-03-17 19:02:14'
+    modifiedAt: '2023-05-12 14:17:49'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVFKT
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_VBRK
+      outputs:
+      - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
 datasets:
@@ -7042,7 +7043,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-05-15 09:05:02'
-    modifiedAt: '2023-05-15 09:05:02'
+    modifiedAt: '2023-05-17 09:05:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7052,6 +7053,21 @@ datasets:
         author: ggrilo1@its.jnj.com
         createdAt: '2023-05-15 09:05:02'
         modifiedAt: '2023-05-15 09:05:02'
+  datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE:
+    name: DS_JDE_MD_SLS_ORDR_HIST_JDE
+    description: ''
+    author: ggrilo1@its.jnj.com
+    createdAt: '2023-05-17 09:01:13'
+    modifiedAt: '2023-05-17 13:18:12'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ggrilo1@its.jnj.com
+        createdAt: '2023-05-17 09:01:13'
+        modifiedAt: '2023-05-17 09:01:13'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
