JEKT-1896 Removed JET config from main SAP pipeline and edited name 🔁 Modified     - Pipeline        - JDE_MD_MATL        - JDE_MD_MATL_JET

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2028,14 +2028,13 @@ pipelines:
     dependencies: {}
   pipelines/JDE_MD_MATL:
     name: JDE_MD_MATL
-    description: MD_MATL For JDE --> bw2, deu, djd, gmd, jem, jes, jet, jsw, mtr,
-      sjd
+    description: MD_MATL For JDE --> bw2, deu, djd, gmd, jem, jes, jsw, mtr, sjd
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-02 10:39:17'
-    modifiedAt: '2023-05-17 09:39:49'
+    modifiedAt: '2023-05-17 13:56:44'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
@@ -2089,14 +2088,13 @@ pipelines:
     dependencies: {}
   pipelines/JDE_MD_MATL_JET:
     name: JDE_MD_MATL_JET
-    description: MD_MATL For JDE --> bw2, deu, djd, gmd, jem, jes, jet, jsw, mtr,
-      sjd
+    description: 'MD_MATL For jet, based on unique requirement to map F0005 via F554101b_adt '
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-17 10:51:58'
-    modifiedAt: '2023-05-17 11:53:20'
+    modifiedAt: '2023-05-17 13:53:59'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
